<?xml version="1.0"?>
<package format="3">
  <name>limovelo</name>
  <version>0.0.0</version>

  <description>"Localize Intensively and Map Offline" is a framework for real-time, direct, accurate LiDAR-Inertial SLAM based on FAST-LIO2.</description>

  <maintainer email="andreuhuguet@estudiantat.upc.edu">Andreu Huguet (@Huguet57)</maintainer>

  <license>BSD</license>

  <author email="andreuhuguet@estudiantat.upc.edu">Andreu Huguet (@Huguet57)</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
